test/subjects/invalid/sticks.php
<?php

	declare (sticks = 0) // { Error: PHP only supports the 'ticks' directive } 
	{
		echo "a";
	}
?>
